kubernetes/lb-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  name: aws-load-balancer-controller
  namespace: backstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - name: aws-load-balancer-controller
          # Replace with the image version
          image: amazon/aws-alb-ingress-controller:v2.3.0
          args:
            - --cluster-name=backstage-cluster
            - --ingress-class=alb
            # Additional arguments here
          # ... additional container settings ...

# ... you might need additional configuration depending on your setup ...
