kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-alb-ingress
  annotations:
    # Specify the ingress class as ALB
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # ALB-specific annotations can be added here
    # Example: Subnets and security groups for the ALB
    alb.ingress.kubernetes.io/subnets: "subnet-03e0b91b2ac696fd5"
    alb.ingress.kubernetes.io/security-groups: "sg-12345"
    # Specify the ARN of your ACM certificate
    #alb.ingress.kubernetes.io/certificate-arn: <your-acm-certificate-arn>
    # Enable HTTPS
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # Redirect HTTP to HTTP
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # More annotations for ALB settings can be added as needed


spec:
  rules:
  - host: "cumin.se"
    http:
      paths:
      - path: /backstage
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 80
      # Redirect HTTP to HTTPS 
#      - path: /*
#        pathType: Prefix
#        backend:
#          service:
#            name: ssl-redirect
#            port:
#              number: use-annotation
